# Sooner-HFT-Engine

./: Cargo.toml  README.md
apps/backtester/: Cargo.toml
apps/backtester/src/: main.rs
apps/recorder/: Cargo.toml
apps/recorder/src/: main.rs
apps/trader/: Cargo.toml
apps/trader/src/: main.rs  telemetry.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  instrument.rs  lib.rs  market.rs  order.rs  primitives.rs
crates/exchanges/: Cargo.toml
crates/exchanges/src/: lib.rs
crates/exchanges/src/bybit/: mod.rs  orderbook.rs  parser.rs  types.rs
docs/src/: SUMMARY.md
docs/src/adr/: 0001-decimal-not-float.md  0002-workspace-layout.md  0003-event-driven.md  0004-btreemap-orderbook.md  0005-bounded-channels.md  0006-wire-types-separate-from-domain.md
docs/src/architecture/: data_flow.md  overview.md
docs/src/phases/: phase1.md
