[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[dependencies]
hft-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
